visualization of formulary clusters updated

--- a/clusters.ipynb
+++ b/clusters.ipynb
@@ -27,7 +27,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we want to visualize clusters based on rejection rate and median price of a drug based on group or pcn. I've considered pcn, one might also experiment with group."
+    "Here we want to visualize clusters based on rejection rate and median price of a drug based on group or pcn. I've considered pcn, one might also experiment with group. We predict these clusters corresponds to different tiers to formlary:\n",
+    "\n",
+    "1) Tier 1 : generic drugs/preferred branded drugs.\n",
+    "\n",
+    "2) Tier 2 : non preferred generic drugs/preferred branded drugs.\n",
+    "\n",
+    "3) Tier 3: non preferred branded drugs.\n",
+    "\n",
+    "4) Tier 4 : very high speciality drugs."
    ]
   },
   {
